--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-     <html lang="en">
-     <head>
-           <meta charset="UTF-8">
-           <meta http-equiv="X-UA-Compatible" content="IE=edge">
-           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-           <title>Document</title>
-     </head>
-     <body>
-        <h1>LISTA DELLA SPESA</h1>
-        <ul>
-            <li>latte</li>
-            <li>uova</li>
-        </ul>
-     </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <h1>LISTA DELLA SPESA</h1>
+    <ul class="LISTA">
+        <li>latte</li>
+        <li>uova</li>
+        <li>Zucchine</li>
+        <li>Carote</li>
+        <li>Patate</li>
+        <li>Peperoni</li>
+        <li>Pomodori</li>
+    </ul>
+</body>
+
 </html>
